# levelConstrainedPlanning

./: .gitignore  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
artifacts/: closed_loop_dataset_pointer.json  current_artifacts.json  source_phase10_checkpoint_pointer.json
configs/: asset_manifest.json  sr5_level.yaml
docs/: README.md  dataset_training.md  environment.md  ros_adapter.md  runtime.md
launch/: level_planner.launch.py
level_planner/: __init__.py  cli.py
level_planner_cli/: __init__.py  __main__.py
level_planner_core/: __init__.py  condition.py  constraint_class.py  constraints.py  learned_seed.py  planner.py  repair.py  result_schema.py  robot_assets.py  rule_seed.py  seed_provider.py  validators.py  world.py
level_planner_ros/: __init__.py  planner_node.py
migration/: copied_files_report.json
reports/: d5b_negative_diagnostics.json  d5b_negative_diagnostics.md  d6_real_robot_scope.json  d6_real_robot_scope.md  d7_c4_geometry_verify.json  d7_c4_paper_results.jsonl  d7_independent_collision_audit.json  d7_independent_collision_audit.md  d7_summary.md  e9w_paper_internal_review.json  e9w_paper_internal_review.md  headless_validation_matrix.json  headless_validation_matrix.md  release_v0_1_0_summary.md  release_v0_2_0_closed_loop_checklist.json  release_v0_2_0_closed_loop_summary.md
scripts/: closed_loop_smoke.py  headless_smoke.py  smoke_test.sh
tests/: test_candidate_dataset.py  test_constraints_smoke.py  test_import_smoke.py  test_learned_seed.py  test_ompl_baselines.py  test_phase7_dataset_pipeline.py  test_repair.py  (+3 more)
(+102 files in other folders)
