<?xml version="1.0"?>
<package format="3">
  <name>level_planner_ros</name>
  <version>0.1.0</version>
  <description>Optional ROS adapter for the standalone SR5 level constrained planner.</description>
  <maintainer email="caohy@example.com">caohy</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

